--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "admin-view",
+  "name": "fresh-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "lint": "vue-cli-service lint"
   },
-  "main": "background.js",
+  "main": "main.js",
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "@vueup/vue-quill": "^1.0.0-beta.7",
@@ -38,8 +34,6 @@
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.2.0",
     "cssnano": "^5.0.8",
-    "electron": "^17.1.2",
-    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "fibers": "^5.0.0",
@@ -51,7 +45,6 @@
     "sass": "^1.39.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-loader": "^15.9.8",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
