--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "4",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.14",
+    "vue3-smooth-dnd": "^0.0.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
