--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "@vueup/vue-quill": "^1.0.0-beta.7",
-    "ant-design-vue": "^2.2.6",
+    "ant-design-vue": "^3.2.2",
     "axios": "0.21.1",
     "core-js": "^3.6.5",
     "less-loader": "^10.0.1",
     "lodash.get": "^4.4.2",
     "md5": "^2.3.0",
+    "moment": "^2.29.3",
     "quill-image-uploader": "^1.2.2",
     "store": "^2.0.12",
     "vue": "^3.2.7",
